# totem

./: .cproject  .gitignore  .project  Jenkinsfile  efm32gg_bootloader.ld  efm32gg_no_bootloader.ld  main.c
Source/totem/: pinmap.h
application/: .cproject  CMakeLists.txt  main.c
application/.cmake/: clean_cmake_structure.sh  compiler.cmake  definitions.cmake  exclude_eclipse.py  exclude_eclipse.sh
application/Source/app/services/: CMakeLists.txt
application/Source/app/services/inc/: service_can_controller.h  service_can_data_handler.h  service_usb_xmodem.h
application/Source/app/services/src/: service_can_controller.c  service_can_data_handler.c  service_led.c  service_usb_data_handler.c  service_usb_xmodem.c
application/Source/mcu/: CMakeLists.txt
application/Source/mcu/CMSIS/: CMakeLists.txt
application/Source/mcu/CMSIS/Include/: cmsis_gcc.h
application/Source/mcu/Device/: CMakeLists.txt
application/Source/mcu/Device/EFM32GG/Source/Atollic/: efm32gg.ld
application/Source/mcu/Device/EFM32GG/Source/GCC/: startup_efm32gg.S
application/Source/mcu/emlib/: CMakeLists.txt
application/Source/mcu/emlib/inc/: em_bitband.h
application/Source/mcu/middleware/usb/: CMakeLists.txt
application/Source/totem/: CMakeLists.txt  pinmap.h  version.h
application/Source/totem/FreeRTOS/: CMakeLists.txt
application/Source/totem/FreeRTOS/Source/include/: FreeRTOSConfig.h
application/Source/totem/FreeRTOSTrace/: Release notes.txt
application/Source/totem/FreeRTOSTrace/Include/: SEGGER_RTT_Conf.h  trcConfig.h
application/Source/totem/drivers/: CMakeLists.txt
application/Source/totem/drivers/mcp2515/: CMakeLists.txt
application/Source/totem/drivers/mcp2515/inc/: mcp2515_ex.h
application/Source/totem/drivers/mcp2515/src/: mcp2515.c
application/Source/totem/hal/: CMakeLists.txt
application/Source/totem/hal/inc/: totem_common.h  totem_spi_dma.h  totem_sys.h  totem_version.h  totem_watchdog.h
application/Source/totem/hal/src/: totem_nvic.c  totem_sleep.c  totem_spi_dma.c
application/Source/totem/lib/_stdio/: CMakeLists.txt
application/Source/totem/lib/_stdio/src/: _stdio.c
application/Source/totem/lib/dma/: CMakeLists.txt
application/Source/totem/lib/dma/inc/: dmactrl.h
application/Source/totem/lib/trace/inc/: trace.h
application/Source/totem/lib/usb/: CMakeLists.txt  usbconfig.h
application/Source/totem/lib/usb/inc/: descriptors.h  hid.h
application/Source/totem/lib/usb/src/: descriptors.c  hid.c
application/Source/totem/lib/xmodem/: CMakeLists.txt
application/Source/totem/lib/xmodem/inc/: xmodem.h
application/Source/totem/lib/xmodem/src/: xmodem.c
docker/: Dockerfile
host/host_can/: .project
host_can/: .classpath
(+179 files in other folders)
